fixed bug in layout | the 'contact form' was covering the face

--- a/sass/partials/_contact.scss
+++ b/sass/partials/_contact.scss
@@ -1,5 +1,7 @@
 .contact {
     
+   background-color: $backgroundColor;
+    
    .header {       
        @include header($contactHeaderBackground);
    }
